# pico-wallet-desktop-app

./: .gitignore  .prettierrc  bun.lockb  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  rpc.rs  transport.rs
src-tauri/src/rpc/: commands.rs  constants.rs  response.rs
src/api/: index.ts  mempool.ts  wallet.ts
src/routes/: +layout.svelte  +page.svelte
src/stores/: devices.ts  index.ts  wallet.ts
src/types/: index.ts
src/utils/: btc.ts  toaster.ts
